--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,6 +32,7 @@
         <div id="contenu">
 
             <h1 style="color: #ffff;">Bienvenue</h1>
+            <h2 style="color: #ffff;">Sur ce replica de forum, veuillez bien vous créer un compte si ce n'est pas deja fait, ou bien vous connecter pour pouvoir poster vos threads et reagir a ceux des autres.</h2>
 
         </div>
 
