--- a/views/moderate.ejs
+++ b/views/moderate.ejs
@@ -20,6 +20,8 @@
                 </a>
             </div>
 
+            <h1 style="color: #ffff;" id="titre">Moderate</h1>
+
         </div>
 
         <div id="contenu">
