--- a/public/css/home.css
+++ b/public/css/home.css
@@ -39,6 +39,8 @@ body {
 
 #contenu {
     display: flex;
+    flex-direction: column;
+    text-align: center;
     height: 80%;
     flex-grow: 2;
     margin:0 auto;
